# defectvision

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: development.md  engineering_decisions.md
scripts/: generate_demo.py
src/dashboard/: app.py
src/inference/: main.py  model.py  schemas.py
src/stream/: camera.py  processor.py  run.py
src/train/: augmentation_experiment.py  capture.py  compare_models.py  export.py  train.py  train_mvtec2.py
tests/: test_inference.py  test_stream.py
